Fix D&D of shape layers

BUG:297393